[package]
name = "cpp_vs_rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "libs/proc_diagnostic_types" ]

[dependencies]
memoffset = { version = "0.7.1", optional = true }

[dependencies.cpp_vs_rust_proc_diagnostic_types]
path = "libs/proc_diagnostic_types"

[features]
default = ["qljs_memoffset"]
qljs_debug = []
qljs_memoffset = ["dep:memoffset"]
