[package]
name = "cpp_vs_rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "libs/test", "libs/proc_diagnostic_types" ]

[dependencies]
cpp_vs_rust_proc_diagnostic_types = { path = "libs/proc_diagnostic_types" }

[dev-dependencies]
cpp_vs_rust_test = { path = "libs/test" }
memoffset = { version = "0.7.1" }

[features]
default = []
qljs_debug = []
