[package]
name = "cpp_vs_rust_i18n"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
cpp_vs_rust_container = { path = "../container" }
cpp_vs_rust_port = { path = "../port" }
cpp_vs_rust_util = { path = "../util" }
libc = { version = "0.2.138", default-features = false }

[dev-dependencies]
cpp_vs_rust_fe = { path = "../fe" }
cpp_vs_rust_test = { path = "../test" }
