[package]
name = "cpp_vs_rust_fe"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
cpp_vs_rust_container = { path = "../container" }
cpp_vs_rust_i18n = { path = "../i18n" }
cpp_vs_rust_port = { path = "../port" }
cpp_vs_rust_proc_diagnostic_types = { path = "../proc_diagnostic_types" }
cpp_vs_rust_util = { path = "../util" }

[dev-dependencies]
cpp_vs_rust_test = { path = "../test" }
